--- a/com.ospinet.SplashScreen/res/layout/home_new.xml
+++ b/com.ospinet.SplashScreen/res/layout/home_new.xml
@@ -77,7 +77,7 @@
 
 </RelativeLayout>
 <RelativeLayout 
-      android:layout_width="wrap_content"
+      android:layout_width="fill_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:id="@+id/relbuttons">
@@ -130,31 +130,52 @@
     />
 
 
-<ImageView 
-        android:layout_width="wrap_content"
+<ImageView
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/imgShare"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="60dp"
     android:clickable="true"
     android:background="@drawable/share"
-    
+
     android:layout_toRightOf="@+id/imgRecords"/>
 
 <TextView
-          android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/txtShare"
-    android:text="Share"
-    android:textColor="#000000"
-    android:textSize="14sp"
-    android:layout_below="@+id/imgShare"
-    android:layout_marginTop="4dp"
-    android:layout_alignLeft="@+id/imgShare"
-    android:layout_marginLeft="3dp"
-    />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtShare"
+        android:text="Share"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:layout_below="@+id/imgShare"
+        android:layout_marginTop="4dp"
+        android:layout_alignLeft="@+id/imgShare"
+        android:layout_marginLeft="3dp"
+        />
 
+ <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imgSearch"
+        android:clickable="true"
+        android:background="@drawable/ic_menu_search"
+        android:layout_alignTop="@+id/imgLogout"
+        android:onClick="Search"
+        android:layout_alignLeft="@+id/imgShare" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtSearch"
+        android:text="Search"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:layout_below="@+id/imgSearch"
+        android:layout_marginTop="4dp"
+        android:layout_alignLeft="@+id/imgShare"
+        android:layout_marginLeft="3dp"
+        />
 
 
 <ImageView 
