--- a/com.ospinet.SplashScreen/res/layout/home_new.xml
+++ b/com.ospinet.SplashScreen/res/layout/home_new.xml
@@ -88,6 +88,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginLeft="50dp"
     android:clickable="true"
+    android:onClick="Profile"
     android:background="@drawable/profile"
     />
 
