--- a/com.ospinet.SplashScreen/res/layout/profile_view.xml
+++ b/com.ospinet.SplashScreen/res/layout/profile_view.xml
@@ -22,30 +22,28 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:id="@+id/header"
-            android:background="#1BA0A2">
+            android:background="#1BA0A2"
+            android:padding="15dp">
 
         <RelativeLayout
             android:id="@+id/linGender"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:layout_above="@+id/txtEmail"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_marginBottom="30dp"
-            android:layout_alignParentRight="true">
+            android:layout_above="@+id/linGender">
 
             <TextView
                 android:id="@+id/TextNameLetters"
-                android:layout_width="95dp"
-                android:layout_height="100dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:background="@drawable/circle"
                 android:gravity="center"
-                android:text="  TD"
                 android:textColor="#1ba0a2"
-                android:textSize="35dp"
-                android:paddingRight="20dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="33dp" />
+                android:textSize="30dp"
+                android:text="  "
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,11 +51,10 @@
                 android:id="@+id/txtName"
                 android:text="login_user"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="114dp" />
+                android:layout_centerHorizontal="true" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -65,10 +62,17 @@
                 android:id="@+id/imgVerified"
                 android:clickable="true"
                 android:background="@drawable/tick"
-                android:layout_alignTop="@+id/txtName"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="42dp" />
+                android:layout_alignBottom="@+id/txtName"
+                android:layout_alignParentRight="true" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/linGender"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="31dp"
+            android:paddingLeft="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,12 +80,9 @@
                 android:id="@+id/txtEmail"
                 android:text="User email id"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_alignParentBottom="true"
-                android:layout_toLeftOf="@+id/imgVerifiedOne"
-                android:layout_marginBottom="89dp"
-                android:layout_alignLeft="@+id/txtGender" />
+                android:layout_above="@+id/txtGender" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -89,34 +90,57 @@
                 android:id="@+id/imgVerifiedOne"
                 android:clickable="true"
                 android:background="@drawable/tick"
-                android:layout_marginRight="45dp"
-                android:layout_alignTop="@+id/txtEmail"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtGender"
-                android:text="Gender"
+                android:id="@+id/txtGenderfix"
+                android:text="Gender          :"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
-                android:layout_marginLeft="46dp"
+                android:paddingTop="10dp"
                 android:layout_below="@+id/imgVerifiedOne"
-                android:layout_alignParentLeft="true"
-                android:paddingTop="10dp" />
+                android:layout_alignParentLeft="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtGender"
+                android:text="Gender value"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:paddingTop="10dp"
+                android:layout_alignTop="@+id/txtGenderfix"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtDOBfix"
+                android:text="Age                 :"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:paddingTop="13dp"
+                android:layout_below="@+id/txtGender"
+                android:layout_alignLeft="@+id/txtEmail" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtDOB"
-                android:text="DOB"
+                android:text="DOB value"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
+                android:paddingTop="13dp"
                 android:layout_below="@+id/txtGender"
-                android:layout_alignLeft="@+id/txtGender"
-                android:paddingTop="15dp" />
+                android:layout_alignLeft="@+id/txtGender" />
+        </RelativeLayout>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -129,8 +153,8 @@
                 style="@drawable/button_custom"
                 android:layout_width="fill_parent"
                 android:layout_height="41dp"
-                android:background="@drawable/button_custom_two"
-                android:text="        Change Password"
+                android:background="@drawable/button_custom"
+                android:text="    Change Password"
                 android:textColor="#FFFFFF"
                 android:layout_below="@+id/editDescription"
                 android:layout_marginTop="5dp"
