--- a/com.ospinet.SplashScreen/res/layout/contact_row.xml
+++ b/com.ospinet.SplashScreen/res/layout/contact_row.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/lstselector" >
         <ImageView
             android:id="@+id/rightarrow"
@@ -19,52 +19,69 @@
             android:layout_marginRight="15dp"
             android:layout_centerVertical="true"/>
 
+        <RelativeLayout
+            android:id="@+id/txtOwner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:longClickable="true">
+
         <TextView
             android:id="@+id/txtFname"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:textColor="#000000"
-            android:textSize="18dp">
-        </TextView>
-        
-        <TextView
-            android:id="@+id/txtLname"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:layout_toRightOf="@+id/txtFname"
-            android:textColor="#000000"
-            android:textSize="18dp">
-        </TextView>
-
-        <TextView
-            android:id="@+id/txtFriendId"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp"
-            android:textStyle="bold">
-        </TextView>
-
-        <TextView
-            android:id="@+id/txtEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
+            android:text="Fname"
             android:paddingTop="15dp"
-            android:layout_below="@+id/txtFname"
             android:textColor="#000000"
-            android:textSize="17dp">
+            android:textSize="18dp"
+            android:layout_below="@+id/txtFriendId"
+            android:layout_toRightOf="@+id/txtFriendId">
         </TextView>
+
+            <TextView
+                android:id="@+id/txtLname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:text="Lname"
+                android:paddingTop="15dp"
+                android:textColor="#000000"
+                android:textSize="18dp"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/txtFname">
+            </TextView>
+
+            <TextView
+                android:id="@+id/txtEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:text="Email"
+                android:textColor="#000000"
+                android:textSize="17dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="28dp">
+            </TextView>
+
+            <TextView
+                android:id="@+id/txtFriendId"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:textColor="#FFFFFF"
+                android:textSize="20dp"
+                android:textStyle="bold">
+            </TextView>
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </RelativeLayout>
