--- a/com.ospinet.SplashScreen/res/layout/menu4.xml
+++ b/com.ospinet.SplashScreen/res/layout/menu4.xml
@@ -42,14 +42,14 @@
 </LinearLayout>
 
     <TextView
-        android:id="@+id/logoName"
+        android:id="@+id/txtEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
         android:textColor="@android:color/white"
         android:layout_marginLeft="3dp"
         android:clickable="true"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
