--- a/com.ospinet.SplashScreen/res/layout/profile_view.xml
+++ b/com.ospinet.SplashScreen/res/layout/profile_view.xml
@@ -27,22 +27,21 @@
 
             <TextView
                 android:id="@+id/TextNameLetters"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:background="@drawable/circle"
                 android:gravity="center"
                 android:textColor="#79888A"
                 android:textSize="30dp"
-                android:text="  "
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
 
             <RelativeLayout
                 android:id="@+id/linGender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/TextNameLetters">
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,8 +51,7 @@
                 android:textColor="#79888A"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
-                android:layout_alignTop="@+id/imgVerifiedOne"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true" />
 
             <ImageView
@@ -71,7 +69,7 @@
                 android:id="@+id/txtEmail"
                 android:text="User email id"
                 android:textColor="#79888A"
-                android:textSize="13sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/txtName"
@@ -85,9 +83,8 @@
                 android:id="@+id/imgVerifiedOne"
                 android:clickable="true"
                 android:background="@drawable/tick"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="21dp" />
+                android:layout_above="@+id/txtEmail"
+                android:layout_alignParentRight="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -97,7 +94,7 @@
                 android:textColor="#79888A"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:layout_below="@+id/txtEmail"
                 android:layout_alignParentLeft="true" />
 
@@ -109,7 +106,7 @@
                 android:textColor="#79888A"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:layout_alignTop="@+id/txtGenderfix"
                 android:layout_toRightOf="@+id/txtDOBfix" />
 
@@ -121,7 +118,7 @@
                 android:textColor="#79888A"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:layout_below="@+id/txtGenderfix"
                 android:layout_alignParentLeft="true" />
 
@@ -133,7 +130,7 @@
                 android:textColor="#79888A"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:layout_alignTop="@+id/txtDOBfix"
                 android:layout_alignLeft="@+id/txtGender" />
 
@@ -145,10 +142,18 @@
                 android:textColor="#79888A"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 android:layout_alignTop="@+id/txtDOB"
                 android:layout_toRightOf="@+id/txtDOB" />
         </RelativeLayout>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/relbuttons"
+            android:background="#FFFFFF">
 
             <Button
                 android:id="@+id/btnpwd"
@@ -159,17 +164,7 @@
                 android:text="Change Password"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true" />
-
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/relbuttons"
-            android:background="#FFFFFF">
-
+                android:layout_alignParentTop="true" />
         </RelativeLayout>
         </LinearLayout>
 </RelativeLayout>
