--- a/com.ospinet.SplashScreen/res/layout/home_new.xml
+++ b/com.ospinet.SplashScreen/res/layout/home_new.xml
@@ -138,6 +138,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginLeft="60dp"
     android:clickable="true"
+    android:onClick="Share"
     android:background="@drawable/share"
 
     android:layout_toRightOf="@+id/imgRecords"/>
