--- a/com.ospinet.SplashScreen/res/layout/notification_row.xml
+++ b/com.ospinet.SplashScreen/res/layout/notification_row.xml
@@ -8,7 +8,7 @@
    
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/lstselector" >
  <ImageView
         android:id="@+id/rightarrow"
@@ -21,8 +21,8 @@
         
         <TextView
             android:id="@+id/txtType_id"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:paddingBottom="5dp"
             android:paddingLeft="15dp"
             android:paddingTop="5dp"
@@ -39,7 +39,7 @@
             android:paddingBottom="15dp"
             android:paddingLeft="10dp"
             android:paddingTop="15dp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="ID">
@@ -51,7 +51,7 @@
             android:paddingBottom="15dp"
             android:paddingLeft="10dp"
             android:paddingTop="15dp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="From">
@@ -61,28 +61,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="20dp"
-            android:textStyle="bold"
             android:text="Fname"
-            android:paddingTop="15dp"
+            android:paddingTop="10dp"
             android:layout_below="@+id/txtId"
             android:layout_alignParentLeft="true"
-            android:layout_marginTop="33dp">
+            android:layout_marginTop="25dp">
         </TextView>
         <TextView
             android:id="@+id/txtLname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="20dp"
-            android:textStyle="bold"
             android:text="Lname"
             android:layout_above="@+id/txtEmail"
-            android:paddingTop="15dp"
-            android:layout_toRightOf="@+id/txtFname"
-            android:layout_alignTop="@+id/txtFname">
+            android:paddingTop="10dp"
+            android:layout_alignTop="@+id/txtFname"
+            android:layout_toRightOf="@+id/txtFname">
         </TextView>
         <TextView
             android:id="@+id/txtMember_record_id"
@@ -104,13 +102,12 @@
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
             android:paddingTop="10dp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="20dp"
-            android:textStyle="bold"
             android:text="Email"
             android:layout_below="@+id/txtFname"
-            android:layout_toLeftOf="@+id/txtLname"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true">
         </TextView>
         
     </RelativeLayout>
