--- a/com.ospinet.SplashScreen/res/layout/menu1.xml
+++ b/com.ospinet.SplashScreen/res/layout/menu1.xml
@@ -72,29 +72,29 @@
         android:layout_alignTop="@+id/notifications" />
     <TextView
         android:id="@+id/actionbar_notifcation_textview2"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/circle_red"
-        android:text="99"
         android:textColor="#ffffff"
         android:layout_alignBottom="@+id/options"
         android:layout_toLeftOf="@+id/add"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp" />
 
     <TextView
         android:id="@+id/actionbar_notifcation_textview"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/circle_red"
-        android:text="1"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_alignTop="@+id/actionbar_notifcation_textview2"
         android:layout_toLeftOf="@+id/notifications"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp" />
 
 
 </RelativeLayout>
