--- a/com.ospinet.SplashScreen/res/layout/notifications.xml
+++ b/com.ospinet.SplashScreen/res/layout/notifications.xml
@@ -22,9 +22,7 @@
         android:layout_marginTop="50dp"
         android:text="No Notifications for you."
         android:textColor="#000000"
-        android:layout_below="@+id/rel_home_header"
-        android:textSize="18dp"
-        android:textStyle="normal|bold" />
+        android:layout_below="@+id/rel_home_header" />
 
     <ListView
         android:id="@+id/NotificationList"
